--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE HTML>
 <html lang="pt">
 <head>
+    <meta charset="utf-8">
+    <title>Flexbox</title>
     <link rel="stylesheet" href="css/css.css">
-<meta charset="utf-8">
-<title>Flexbox</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1"/>
+    <link rel="icon" href="img/buggatti.jpg" type="image/x-icon">
+    <meta name="autor" content="Kauã Tereza de Oliveira">
+    <meta name="descrição" content="Avaliação III - CSS">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1"/>
 </head>
 <body>
     <header>
